--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -1,3 +1,14 @@
+.headerContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: var(--background);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.2px);
+  -webkit-backdrop-filter: blur(5.2px);
+}
+
 .burgerMenuButton {
   width: 32px;
   height: 32px;
@@ -9,7 +20,7 @@
 }
 
 .burgerMenuButton::before {
-  content: "";
+  content: '';
   width: 100%;
   border-top: 1px solid #000;
   transform: translateY(-4px);
@@ -17,7 +28,7 @@
 }
 
 .burgerMenuButton::after {
-  content: "";
+  content: '';
   width: 100%;
   border-top: 1px solid #000;
   transform: translateY(4px);
