--- a/app/globals.css
+++ b/app/globals.css
@@ -1,25 +1,17 @@
 @import 'tailwindcss';
 
 :root {
-  --foreground: #171717;
-  --background: #fdfbee;
+  --light: #fdfbee;
+  --dark: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  --color-background: var(--dark);
+  --color-foreground: var(--light);
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--dark);
 }
 
 ::view-transition-old(root),
@@ -33,7 +25,7 @@ body {
 
 ::view-transition-image-pair(root) {
   isolation: isolate;
-  will-change: transform, scale;
+  will-change: transform, scale, opacity;
   z-index: 1;
 }
 
@@ -44,6 +36,7 @@ body {
 ::view-transition-old(root) {
   z-index: 1;
   animation: none !important;
+  transform-origin: top center;
 }
 
 .gridBox {
