--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background: var(--background);
+  background: var(--dark);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5.2px);
   -webkit-backdrop-filter: blur(5.2px);
