--- a/app/globals.css
+++ b/app/globals.css
@@ -52,3 +52,29 @@ body {
 .gridBoxAboutPage {
   @apply rounded p-4 border-gray-300 border flex flex-col justify-center items-center gap-4 order-12 text-gray-800;
 }
+
+/* Chrome, Safari, Edge */
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+.fade-in {
+  animation: fade-in 0.3s ease-out;
+}
