--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,23 @@
   --dark: #171717;
 }
 
+@theme {
+  --color-light: #fdfbee;
+  --color-lightGrey: #ebe8db;
+  --color-lime: #57b4ba;
+  --color-dark: #015551;
+  --color-orange: #fe4f2d;
+  --color-pink: #d76c82;
+  --color-darkRed: #3d0301;
+  --color-green: #6a9c89;
+  --color-yellow: #ffb433;
+  --color-lightYellow: #fdffd2;
+  --color-lightBlue: #98d8ef;
+  --color-blue: #23486a;
+  --color-maroon: #9f8383;
+  --color-brown: #443627;
+}
+
 body {
   background: var(--dark);
   cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="48" viewBox="0 0 24 24"><path fill="%23FFF" stroke="%23000" stroke-width="1.25" d="M5.5 3.21V20.8c0 .45.54.67.85.35l4.86-4.86a.5.5 0 0 1 .35-.15h6.87a.5.5 0 0 0 .35-.85L6.35 2.85a.5.5 0 0 0-.85.35Z"></path></svg>'),
